try to fix the nav on mobile

--- a/src/components/Main/MainDesktop/MainDesktop.css
+++ b/src/components/Main/MainDesktop/MainDesktop.css
@@ -933,6 +933,35 @@
     left: 0 !important;
 }
 
+.s14{
+    position: relative;
+    width: 130vh;
+    min-width: 130vh;
+    height: 100vh;
+}
+
+.s14 .parallax-image__container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
+.s14 .parallax-image{
+    min-width: 100vh;
+    max-height: 100vh;
+    width: auto;
+    height: auto;
+    position: absolute; 
+    bottom: 0;
+    left: 0 !important;
+}
+
+.s14 .parallax-caption div:nth-child(2), .s14 .parallax-caption div:nth-child(3){
+    color: black;
+}
+
 .furniture{
     display: flex;
     align-items: center;
