--- a/src/components/Main/MainMobile/MainMobile.css
+++ b/src/components/Main/MainMobile/MainMobile.css
@@ -2,13 +2,13 @@ main{
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    max-width: 100vw;
+    width: 100vw;
 }
 
 .m-hero{
     position: relative;
     width: 100vw;
-    height: 100svh!important;
+    min-height: 100svh;
     background-image: url("../../../assets/images/hero-banner.webp");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
